Updated class website.

--- a/index.html
+++ b/index.html
@@ -1,1 +1,148 @@
-Hello World
+<!DOCTYPE html>
+<html>
+<title>CE263|Scalable Spatial Data Analysis</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<!-- <link rel="stylesheet" href="http://www.w3schools.com/lib/w3.css"> -->
+<link rel="stylesheet" href="w3.css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
+<link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
+<style>
+body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
+.w3-navbar,h1,button {font-family: "Montserrat", sans-serif}
+.fa-anchor,.fa-coffee {font-size:200px}
+</style>
+<body>
+
+<!-- Navbar -->
+<!-- <ul class="w3-navbar w3-red w3-card-2 w3-top w3-left-align w3-large">
+  <li class="w3-hide-medium w3-hide-large w3-opennav w3-right">
+    <a class="w3-padding-large w3-hover-white w3-large w3-red" href="javascript:void(0);" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
+  </li>
+  <li><a href="#" class="w3-padding-large w3-white">Home</a></li>
+  <li class="w3-hide-small"><a href="#" class="w3-padding-large w3-hover-white">Link 1</a></li>
+  <li class="w3-hide-small"><a href="#" class="w3-padding-large w3-hover-white">Link 2</a></li>
+  <li class="w3-hide-small"><a href="#" class="w3-padding-large w3-hover-white">Link 3</a></li>
+  <li class="w3-hide-small"><a href="#" class="w3-padding-large w3-hover-white">Link 4</a></li>
+</ul> -->
+
+<!-- Navbar on small screens -->
+<!-- <div id="navDemo" class="w3-hide w3-hide-large w3-hide-medium w3-top" style="margin-top:51px">
+  <ul class="w3-navbar w3-left-align w3-large w3-black">
+    <li><a class="w3-padding-large" href="#">Link 1</a></li>
+    <li><a class="w3-padding-large" href="#">Link 2</a></li>
+    <li><a class="w3-padding-large" href="#">Link 3</a></li>
+    <li><a class="w3-padding-large" href="#">Link 4</a></li>
+  </ul>
+</div> -->
+
+<!-- Header -->
+<div class="w3-container w3-light-blue-gradient w3-center w3-padding-100 w3-text-white">
+  <h1 class="w3-margin w3-jumbo">CE 263:Scalable Spatial Data Analysis</h1>
+  <h2 class="w3-xlarge">Fall 2016</h2>
+</div>
+
+<!-- First Grid -->
+<div class="w3-row-padding  w3-padding-32 w3-container">
+  <div class="w3-content">
+    <div class="w3-twothird w3-padding-left-100">
+      <h2 class="w3-text-grey">Instructor</h2>
+      <h4>Professor <a href="http://faculty.ce.berkeley.edu/pozdnukhov/">Alexey Pozdnukhov</a></h4>
+      <h4>115 McLaughlin Hall.</h4>
+      <h4>Office hours: (TBD) </h4>
+
+      <div class="w3-padding-8"></div>
+
+      <h2 class="w3-text-grey">GSI</h2>
+      <h4>Ziheng Lin</h4>
+      <h4>Office hours: (TBD)</h4>
+      <div class="w3-padding-8"></div>
+
+      <h2 class="w3-text-grey">Lecture</h2>
+      <h4>Davis 406</h4>
+      <h4>Tu. Th. 2:00-3:30 p.m.</h4>
+
+    </div>
+  </div>
+
+
+
+</div>
+
+<!-- Second Grid -->
+<div class="w3-row-padding w3-light-grey w3-padding-32 w3-container">
+  <div class="w3-content">
+
+    <div class="w3-twothird w3-padding-left-100">
+      <h2>Syllabus</h2>
+
+      <div class="w3-padding-8"></div>
+        <li><h4>August 25 --- Introduction</h4></li>
+        <li><h4>August 30</h4></li>
+        <li><h4>September 1</h4></li>
+        <li><h4>September 6</h4></li>
+        <li><h4>September 8</h4></li>
+        <!-- <li><h4>September 13</h4></li>
+        <li><h4>September 15</h4></li>
+        <li><h4>September 20</h4></li>
+        <li><h4>September 22</h4></li>
+        <li><h4>September 27</h4></li>
+        <li><h4>September 29</h4></li>
+        <li><h4>October 4</h4></li>
+        <li><h4>October 6</h4></li>
+        <li><h4>October 11</h4></li>
+        <li><h4>October 13</h4></li>
+        <li><h4>October 18</h4></li>
+        <li><h4>October 20</h4></li>
+        <li><h4>October 25</h4></li>
+        <li><h4>October 27</h4></li>
+        <li><h4>November 1</h4></li>
+        <li><h4>November 3</h4></li>
+        <li><h4>November 8</h4></li>
+        <li><h4>November 10</h4></li>
+        <li><h4>November 15</h4></li>
+        <li><h4>November 17</h4></li>
+        <li><h4>November 22</h4></li>
+        <li><h4>November 24</h4></li>
+        <li><h4>November 29</h4></li>
+        <li><h4>December 1</h4></li>
+        <li><h4>December 6</h4></li>
+        <li><h4>December 8</h4></li> -->
+        ...
+    </div>
+  </div>
+</div>
+
+<!-- Third Grid -->
+<div class="w3-row-padding  w3-padding-32 w3-container">
+  <div class="w3-content">
+    <div class="w3-twothird w3-padding-left-100">
+
+      <h2 class="w3-text-grey">Homework</h2>
+      <h4>Homework 1 : Due September 6</h4>
+
+    </div>
+  </div>
+</div>
+
+<!-- Footer -->
+<div class="w3-container w3-black w3-center w3-opacity w3-padding-32">
+</div>
+
+<!-- Footer -->
+
+<script>
+// Used to toggle the menu on small screens when clicking on the menu button
+function myFunction() {
+    var x = document.getElementById("navDemo");
+    if (x.className.indexOf("w3-show") == -1) {
+        x.className += " w3-show";
+    } else {
+        x.className = x.className.replace(" w3-show", "");
+    }
+}
+</script>
+
+</body>
+</html>
+</li>
