--- a/index.html
+++ b/index.html
@@ -38,29 +38,32 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
 
 <!-- Header -->
 <div class="w3-container w3-light-blue-gradient w3-center w3-padding-100 w3-text-white">
-  <h1 class="w3-margin w3-jumbo">CE 263:Scalable Spatial Data Analysis</h1>
+  <h1 class="w3-margin w3-jumbo">CE 263N:Scalable Spatial Data Analysis</h1>
   <h2 class="w3-xlarge">Fall 2016</h2>
 </div>
 
 <!-- First Grid -->
 <div class="w3-row-padding  w3-padding-32 w3-container">
   <div class="w3-content">
-    <div class="w3-twothird w3-padding-left-100">
+    <div class="w3-padding-left-100">
       <h2 class="w3-text-grey">Instructor</h2>
       <h4>Professor <a href="http://faculty.ce.berkeley.edu/pozdnukhov/">Alexey Pozdnukhov</a></h4>
-      <h4>115 McLaughlin Hall.</h4>
-      <h4>Office hours: (TBD) </h4>
+      <h4>115 McLaughlin Hall</h4>
+      <!-- <h4>Office hours: (TBD) </h4> -->
+      <div class="w3-padding-8"></div>
+
+      <h2 class="w3-text-grey">Description</h2>
+      <h4>Introduction to modern methods of data analysis, spatial data handling and visualization technologies for engineers and data scientists. Theoretical coverage includes a selection of methods from spatial statistics, exploratory data analysis, spatial data mining, discriminative and generative approaches of machine learning. Projects and assignment tasks are targeted at real-world scalable implementation of systems and services based on data analytics in environmental remote sensing, transportation, energy, location-based services and the domain of “smart cities” in general.</h4>
+      <div class="w3-padding-8"></div>
+
+      <h2 class="w3-text-grey">Prerequisites</h2>
+      <h4>No formal prerequisites. (an undergraduate degree in engineering domain is expected, with knowledge of linear algebra and statistics, as well as some programming experience)</h4>
 
       <div class="w3-padding-8"></div>
 
-      <h2 class="w3-text-grey">GSI</h2>
-      <h4>Ziheng Lin</h4>
-      <h4>Office hours: (TBD)</h4>
-      <div class="w3-padding-8"></div>
-
-      <h2 class="w3-text-grey">Lecture</h2>
+      <!-- <h2 class="w3-text-grey">Lecture</h2>
       <h4>Davis 406</h4>
-      <h4>Tu. Th. 2:00-3:30 p.m.</h4>
+      <h4>Tu. Th. 2:00-3:30 p.m.</h4> -->
 
     </div>
   </div>
@@ -73,42 +76,182 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
 <div class="w3-row-padding w3-light-grey w3-padding-32 w3-container">
   <div class="w3-content">
 
-    <div class="w3-twothird w3-padding-left-100">
+    <div class="w3-padding-left-100">
       <h2>Syllabus</h2>
 
       <div class="w3-padding-8"></div>
-        <li><h4>August 25 --- Introduction</h4></li>
-        <li><h4>August 30</h4></li>
-        <li><h4>September 1</h4></li>
-        <li><h4>September 6</h4></li>
-        <li><h4>September 8</h4></li>
-        <!-- <li><h4>September 13</h4></li>
-        <li><h4>September 15</h4></li>
-        <li><h4>September 20</h4></li>
-        <li><h4>September 22</h4></li>
-        <li><h4>September 27</h4></li>
-        <li><h4>September 29</h4></li>
-        <li><h4>October 4</h4></li>
-        <li><h4>October 6</h4></li>
-        <li><h4>October 11</h4></li>
-        <li><h4>October 13</h4></li>
-        <li><h4>October 18</h4></li>
-        <li><h4>October 20</h4></li>
-        <li><h4>October 25</h4></li>
-        <li><h4>October 27</h4></li>
-        <li><h4>November 1</h4></li>
-        <li><h4>November 3</h4></li>
-        <li><h4>November 8</h4></li>
-        <li><h4>November 10</h4></li>
-        <li><h4>November 15</h4></li>
-        <li><h4>November 17</h4></li>
-        <li><h4>November 22</h4></li>
-        <li><h4>November 24</h4></li>
-        <li><h4>November 29</h4></li>
-        <li><h4>December 1</h4></li>
-        <li><h4>December 6</h4></li>
-        <li><h4>December 8</h4></li> -->
-        ...
+      <h4>
+      <table style="width:80%">
+        <tr>
+          <th>Lecture</th>
+          <th>Topic</th>
+          <th>Theme</th>
+        </tr>
+        <tr>
+          <td>1</td>
+          <td>Introduction</td>
+          <td>General</td>
+        </tr>
+
+        <tr>
+          <td>2</td>
+          <td>Exploratory data analysis</td>
+          <td>EDA</td>
+        </tr>
+
+        <tr>
+          <td>3</td>
+          <td>Clustering</td>
+          <td>EDA</td>
+        </tr>
+
+        <tr>
+          <td>4</td>
+          <td>Dimensionality reduction</td>
+          <td>EDA</td>
+        </tr>
+
+        <tr>
+          <td>5</td>
+          <td>Spatial databases I</td>
+          <td>Data Handling</td>
+        </tr>
+
+        <tr>
+          <td>6</td>
+          <td>Spatial databases II</td>
+          <td>Data Handling</td>
+        </tr>
+
+        <tr>
+          <td>7</td>
+          <td>GIS and web mapping</td>
+          <td>Data Handling</td>
+        </tr>
+
+        <tr>
+          <td>8</td>
+          <td>Trajectories and map matching</td>
+          <td>Data Processing</td>
+        </tr>
+
+        <tr>
+          <td>9</td>
+          <td>Map matching and reconstruction</td>
+          <td>Data Processing</td>
+        </tr>
+
+        <tr>
+          <td>10</td>
+          <td>Point Pattern Analysis</td>
+          <td>Spatial Statistics</td>
+        </tr>
+
+        <tr>
+          <td>11</td>
+          <td>Geostatistics</td>
+          <td>Spatial Statistics</td>
+        </tr>
+
+        <tr>
+          <td>12</td>
+          <td>Spatial Regression</td>
+          <td>Spatial Statistics</td>
+        </tr>
+
+        <tr>
+          <td>13</td>
+          <td>Geographically weighted models</td>
+          <td>Spatial Statistics</td>
+        </tr>
+
+        <tr>
+          <td>14</td>
+          <td>Intro to ML, model selection</td>
+          <td>ML discriminative</td>
+        </tr>
+
+        <tr>
+          <td>15</td>
+          <td>Locally linear models</td>
+          <td>ML discriminative</td>
+        </tr>
+
+        <tr>
+          <td>16</td>
+          <td>Kernel methods I, SVM</td>
+          <td>ML discriminative</td>
+        </tr>
+
+        <tr>
+          <td>17</td>
+          <td>Kernel methods II, SVR</td>
+          <td>ML discriminative</td>
+        </tr>
+
+        <tr>
+          <td>18</td>
+          <td>Elements of computer vision</td>
+          <td>ML discriminative</td>
+        </tr>
+
+        <tr>
+          <td>19</td>
+          <td>Mixture models, EM</td>
+          <td>ML generative</td>
+        </tr>
+
+        <tr>
+          <td>20</td>
+          <td>MC, HMM, CRF</td>
+          <td>ML generative</td>
+        </tr>
+
+        <tr>
+          <td>21</td>
+          <td>Spatial PLSA/LDA</td>
+          <td>ML generative</td>
+        </tr>
+
+        <tr>
+          <td>22</td>
+          <td>Recommender Systems</td>
+          <td>ML generative</td>
+        </tr>
+
+        <tr>
+          <td>23</td>
+          <td>Complex networks</td>
+          <td>Complex Systems</td>
+        </tr>
+
+        <tr>
+          <td>24</td>
+          <td>Agent-based models</td>
+          <td>Complex Systems</td>
+        </tr>
+
+        <tr>
+          <td>25</td>
+          <td>Catch-up</td>
+          <td>Complex Systems</td>
+        </tr>
+
+        <tr>
+          <td>26</td>
+          <td>Final projects</td>
+          <td>Complex Systems</td>
+        </tr>
+
+        <tr>
+          <td>27</td>
+          <td>Final projects</td>
+          <td>Complex Systems</td>
+        </tr>
+
+
+      </table>
+    </h4>
     </div>
   </div>
 </div>
@@ -116,11 +259,17 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
 <!-- Third Grid -->
 <div class="w3-row-padding  w3-padding-32 w3-container">
   <div class="w3-content">
-    <div class="w3-twothird w3-padding-left-100">
+    <div class="w3-padding-left-100">
 
-      <h2 class="w3-text-grey">Homework</h2>
-      <h4>Homework 1 : Due September 6</h4>
+      <h2 class="w3-text-grey">Course Reader</h2>
+      <h4>The course readings are available on bCourses as pdf files and/or links to online materials.</h4>
 
+      <div class="w3-padding-8"></div>
+      <h2 class="w3-text-grey">Course Grading</h2>
+
+      <h4>1 or 2 Midterms : <b>30%</b></h4>
+      <h4>Homework (6 problems) : <b>50%</b></h4>
+      <h4>Final Project : <b>20%</b></h4>
     </div>
   </div>
 </div>
@@ -133,14 +282,14 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
 
 <script>
 // Used to toggle the menu on small screens when clicking on the menu button
-function myFunction() {
-    var x = document.getElementById("navDemo");
-    if (x.className.indexOf("w3-show") == -1) {
-        x.className += " w3-show";
-    } else {
-        x.className = x.className.replace(" w3-show", "");
-    }
-}
+// function myFunction() {
+//     var x = document.getElementById("navDemo");
+//     if (x.className.indexOf("w3-show") == -1) {
+//         x.className += " w3-show";
+//     } else {
+//         x.className = x.className.replace(" w3-show", "");
+//     }
+// }
 </script>
 
 </body>
