--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title>CE263|Scalable Spatial Data Analysis</title>
+<title>CE263|Scalable Spatial Data Analytics</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <!-- <link rel="stylesheet" href="http://www.w3schools.com/lib/w3.css"> -->
 <link rel="stylesheet" href="w3.css">
@@ -38,7 +38,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
 
 <!-- Header -->
 <div class="w3-container w3-light-blue-gradient w3-center w3-padding-100 w3-text-white">
-  <h1 class="w3-margin w3-jumbo">CE 263N:Scalable Spatial Data Analysis</h1>
+  <h1 class="w3-margin w3-jumbo">CE 263N:Scalable Spatial Data Analytics</h1>
   <h2 class="w3-xlarge">Fall 2016</h2>
 </div>
 
@@ -49,15 +49,20 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
       <h2 class="w3-text-grey">Instructor</h2>
       <h4>Professor <a href="http://faculty.ce.berkeley.edu/pozdnukhov/">Alexey Pozdnukhov</a></h4>
       <h4>115 McLaughlin Hall</h4>
-      <!-- <h4>Office hours: (TBD) </h4> -->
+      <h4>Office hours: (TBD) </h4>
+      <div class="w3-padding-8"></div>
+
+      <h2 class="w3-text-grey">GSI</h2>
+      <h4>Ziheng Lin</a></h4>
+      <h4>Office hours: (TBD) </h4>
       <div class="w3-padding-8"></div>
 
       <h2 class="w3-text-grey">Description</h2>
-      <h4>Introduction to modern methods of data analysis, spatial data handling and visualization technologies for engineers and data scientists. Theoretical coverage includes a selection of methods from spatial statistics, exploratory data analysis, spatial data mining, discriminative and generative approaches of machine learning. Projects and assignment tasks are targeted at real-world scalable implementation of systems and services based on data analytics in environmental remote sensing, transportation, energy, location-based services and the domain of “smart cities” in general.</h4>
+      <h4>Introduction to modern methods of data analysis, spatial data handling and visualization technologies for engineers and data scientists. Theoretical coverage includes a selection of methods from spatial statistics, exploratory data analysis, spatial data mining, discriminative and generative approaches of machine learning. Projects and assignment tasks are targeted at real-world scalable implementation of systems and services based on data analytics in environmental remote sensing, transportation, energy, location-based services and the domain of "smart cities" in general.</h4>
       <div class="w3-padding-8"></div>
 
       <h2 class="w3-text-grey">Prerequisites</h2>
-      <h4>No formal prerequisites. (an undergraduate degree in engineering domain is expected, with knowledge of linear algebra and statistics, as well as some programming experience)</h4>
+      <h4>An undergraduate degree in engineering domain is expected, with knowledge of linear algebra and statistics, as well as some programming experience. The class is taught in Python.</h4>
 
       <div class="w3-padding-8"></div>
 
@@ -93,7 +98,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
           <td>General</td>
         </tr>
 
-        <tr>
+        <!-- <tr>
           <td>2</td>
           <td>Exploratory data analysis</td>
           <td>EDA</td>
@@ -247,7 +252,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
           <td>27</td>
           <td>Final projects</td>
           <td>Complex Systems</td>
-        </tr>
+        </tr> -->
 
 
       </table>
@@ -268,7 +273,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
       <h2 class="w3-text-grey">Course Grading</h2>
 
       <h4>1 or 2 Midterms : <b>30%</b></h4>
-      <h4>Homework (6 problems) : <b>50%</b></h4>
+      <h4>Homework : <b>50%</b></h4>
       <h4>Final Project : <b>20%</b></h4>
     </div>
   </div>
