--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title>CE263|Scalable Spatial Data Analytics</title>
+<title>CE263|Scalable Spatial Analytics</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <!-- <link rel="stylesheet" href="http://www.w3schools.com/lib/w3.css"> -->
 <link rel="stylesheet" href="w3.css">
@@ -38,7 +38,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
 
 <!-- Header -->
 <div class="w3-container w3-light-blue-gradient w3-center w3-padding-100 w3-text-white">
-  <h1 class="w3-margin w3-jumbo">CE 263N:Scalable Spatial Data Analytics</h1>
+  <h1 class="w3-margin w3-jumbo">CE 263N: Scalable Spatial Analytics</h1>
   <h2 class="w3-xlarge">Fall 2016</h2>
 </div>
 
