--- a/index.html
+++ b/index.html
@@ -98,7 +98,9 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
           <td>General</td>
         </tr>
 
-        <!-- <tr>
+        <font color="gray">
+
+        <tr>
           <td>2</td>
           <td>Exploratory data analysis</td>
           <td>EDA</td>
@@ -252,7 +254,9 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
           <td>27</td>
           <td>Final projects</td>
           <td>Complex Systems</td>
-        </tr> -->
+        </tr>
+        
+        </font>
 
 
       </table>
