--- a/index.html
+++ b/index.html
@@ -49,11 +49,13 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
       <h2 class="w3-text-grey">Instructor</h2>
       <h4>Professor <a href="http://faculty.ce.berkeley.edu/pozdnukhov/">Alexey Pozdnukhov</a></h4>
       <h4>115 McLaughlin Hall</h4>
+      <h4>Email:  <img src="alexei_email.png" height="30" width="250"></h4>
       <h4>Office hours: (TBD) </h4>
       <div class="w3-padding-8"></div>
 
       <h2 class="w3-text-grey">GSI</h2>
       <h4>Ziheng Lin</a></h4>
+      <h4>Email:  <img src="ziheng_email.png" height="28" width="250"></h4>
       <h4>Office hours: (TBD) </h4>
       <div class="w3-padding-8"></div>
 
