Added ppt links.

--- a/index.html
+++ b/index.html
@@ -93,19 +93,22 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
           <th>Lecture</th>
           <th>Topic</th>
           <th>Theme</th>
+          <th>Material</th>
         </tr>
         <tr>
           <td>1</td>
           <td>Introduction</td>
           <td>General</td>
+          <td><a href="https://bcourses.berkeley.edu/files/69478512/download?download_frd=1">PPT</a></td>
         </tr>
 
-        <font color="gray">
+        <div class='w3-text-grey'>
 
         <tr>
           <td>2</td>
           <td>Exploratory data analysis</td>
           <td>EDA</td>
+          <td><a href="https://bcourses.berkeley.edu/files/69478513/download?download_frd=1">PPT</a></td>
         </tr>
 
         <tr>
@@ -257,8 +260,8 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
           <td>Final projects</td>
           <td>Complex Systems</td>
         </tr>
-        
-        </font>
+
+      </div>
 
 
       </table>
