--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
           <td>1</td>
           <td>Introduction</td>
           <td>General</td>
-          <td><a href="https://bcourses.berkeley.edu/files/69478512/download?download_frd=1">PPT</a></td>
+          <!-- <td><a href="https://bcourses.berkeley.edu/files/69478512/download?download_frd=1">PPT</a></td> -->
         </tr>
 
         <div class='w3-text-grey'>
@@ -108,7 +108,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
           <td>2</td>
           <td>Exploratory data analysis</td>
           <td>EDA</td>
-          <td><a href="https://bcourses.berkeley.edu/files/69478513/download?download_frd=1">PPT</a></td>
+          <!-- <td><a href="https://bcourses.berkeley.edu/files/69478513/download?download_frd=1">PPT</a></td> -->
         </tr>
 
         <tr>
