Added ppt links.

--- a/index.html
+++ b/index.html
@@ -50,13 +50,13 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
       <h4>Professor <a href="http://faculty.ce.berkeley.edu/pozdnukhov/">Alexey Pozdnukhov</a></h4>
       <h4>115 McLaughlin Hall</h4>
       <h4>Email:  <img src="alexei_email.png" height="30" width="250"></h4>
-      <h4>Office hours: (TBD) </h4>
+      <h4>Office hours: Tuesday 3:30 - 4:30 pm </h4>
       <div class="w3-padding-8"></div>
 
       <h2 class="w3-text-grey">GSI</h2>
       <h4>Ziheng Lin</a></h4>
       <h4>Email:  <img src="ziheng_email.png" height="28" width="250"></h4>
-      <h4>Office hours: (TBD) </h4>
+      <h4>Office hours: Wednesday 3:00 - 5:00 pm </h4>
       <div class="w3-padding-8"></div>
 
       <h2 class="w3-text-grey">Description</h2>
@@ -99,7 +99,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
           <td>1</td>
           <td>Introduction</td>
           <td>General</td>
-          <!-- <td><a href="https://bcourses.berkeley.edu/files/69478512/download?download_frd=1">PPT</a></td> -->
+          <td><a href="https://bcourses.berkeley.edu/files/69517309/download?download_frd=1">PPT</a></td>
         </tr>
 
         <div class='w3-text-grey'>
@@ -108,7 +108,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
           <td>2</td>
           <td>Exploratory data analysis</td>
           <td>EDA</td>
-          <!-- <td><a href="https://bcourses.berkeley.edu/files/69478513/download?download_frd=1">PPT</a></td> -->
+          <td><a href="https://bcourses.berkeley.edu/files/69478513/download?download_frd=1">PPT</a></td>
         </tr>
 
         <tr>
