Added visuaulization part.

--- a/python_guide.html
+++ b/python_guide.html
@@ -96,9 +96,12 @@
                                 and
                                 <a href="https://www.sublimetext.com/">Sublime</a>. Check this
                                 <a href="http://pythoncentral.io/execute-python-script-file-shell/">article</a>
-                                out about on how to run your python scripts. Text editors are smoother in text editing due to their light weights. This approach is also useful when you need to run something remotely on the server where only a shell (but no GUI) is available to you.</p>
+                                out about on how to run your python scripts. Text editors are smoother in text editing due to their light weights and highly customizable for different languages. This approach is also useful when you need to run something remotely on the server
+                                where only a shell (but no GUI) is available to you.</p>
                         </li>
                     </ol>
+
+                    Some personal experience: I use text editors to write python scripts. I will run the scripts using ipython notebook if I would like to store and document the outputs, especially the plots.
 
                 </h4>
 
@@ -122,6 +125,22 @@
 
                     <p>If you cannot wait to play with python using ipython notebook, follow this
                         <a href="http://cs231n.github.io/ipython-tutorial/">page</a>. We will go through more examples later in class.</p>
+
+                </h4>
+
+                <div class="w3-padding-8"></div>
+                <h2 class="w3-text-grey">Data Visualiztion</h2>
+                <h4>
+                    <p>Visualiztion is important for expressing ideas and presenting results from analytics. This is my favorate part when working with data.</p>
+
+                    <p>
+                        <b>Matplotlib</b>
+                        is one of the most powerful visualiztion library in python. You can find sample plots and code
+                        <a href="http://matplotlib.org/gallery.html">here</a>.
+                    </p>
+                    <b>Seaborn</b>
+                    is another library that helps you generate pretty visualiztions. Check it out
+                    <a href="https://stanford.edu/~mwaskom/software/seaborn/examples/index.html">here</a>.
 
                 </h4>
 
