Added ziheng's office hour location.

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         .fa-coffee {
             font-size: 200px;
         }
+
     </style>
     <body>
 
@@ -82,7 +83,7 @@
                 </h4>
                 <h4>Email:
                     <img src="ziheng_email.png" height="28" width="250"></h4>
-                <h4>Office hours: Wednesday 3:00 - 5:00 pm
+                <h4>Office hours: Wednesday 3:00 - 5:00 pm at ITS library, 4th floor Mcaughtlin Hall
                 </h4>
                 <div class="w3-padding-8"></div>
 
@@ -332,7 +333,7 @@
 
     <script>
         // Used to toggle the menu on small screens when clicking on the menu button function myFunction() {     var x = document.getElementById("navDemo");     if (x.className.indexOf("w3-show") == -1) {         x.className += " w3-show";     } else {
-        //   x.className = x.className.replace(" w3-show", "");     } }
+        // x.className = x.className.replace(" w3-show", "");     } }
     </script>
 
 </body>
