--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                 </h4>
                 <h4>Email:
                     <img src="ziheng_email.png" height="28" width="250"></h4>
-                <h4>Office hours: Wednesday 3:00 - 5:00 pm at ITS library, 4th floor Mcaughtlin Hall
+                <h4>Office hours: Wednesday 3:00 - 5:00 pm at ITS library, 4th floor McLaughlin Hall
                 </h4>
                 <div class="w3-padding-8"></div>
 
