Uploaded clustering PPT, homework1, and clustering ipython notebook.

--- a/index.html
+++ b/index.html
@@ -147,6 +147,9 @@
                                 <td>3</td>
                                 <td>Clustering</td>
                                 <td>EDA</td>
+                                <td>
+                                    <a href="https://bcourses.berkeley.edu/files/69478571/download?download_frd=1">PPT</a>
+                                </td>
                             </tr>
 
                             <tr>
@@ -306,6 +309,39 @@
         <div class="w3-content">
             <div class="w3-padding-left-100">
 
+                <h2 class="w3-text-grey">Homework</h2>
+
+                <div class="w3-padding-8"></div>
+                <h4>
+                    <table style="width:80%">
+                        <tr>
+                            <th>Homework Problems</th>
+                            <th>Data Files</th>
+                            <th>Due Date</th>
+                        </tr>
+                        <tr>
+                            <td>
+                                <a href="https://bcourses.berkeley.edu/files/69478523/download?download_frd=1">Homework 1</a>
+                            </td>
+                            <td>
+                                <a href="https://bcourses.berkeley.edu/files/69478496/download?download_frd=1">Data File</a>
+                            </td>
+                            <td>Set. 15</td>
+                        </tr>
+                    </table>
+                </h4>
+
+                <div class="w3-padding-8"></div>
+                <h2 class="w3-text-grey">iPython Notebook Examples</h2>
+                <h4>
+                    <ul>
+                        <li>
+                            <a href="https://bcourses.berkeley.edu/files/69478545/download?download_frd=1">Clustering</a>
+                        </li>
+                    </ul>
+                </h4>
+
+                <div class="w3-padding-8"></div>
                 <h2 class="w3-text-grey">Course Reader</h2>
 
                 <h4>The course readings are available on bCourses as pdf files and/or links to online materials.</h4>
@@ -335,6 +371,12 @@
         // Used to toggle the menu on small screens when clicking on the menu button function myFunction() {     var x = document.getElementById("navDemo");     if (x.className.indexOf("w3-show") == -1) {         x.className += " w3-show";     } else {
         // x.className = x.className.replace(" w3-show", "");     } }
     </script>
+
+</body>
+</html>
+</li>
+= -1) { x.className += " w3-show"; } else { // x.className = x.className.replace(" w3-show", ""); } }
+</script>
 
 </body>
 </html>
