Change PPT to slides.

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                             <td>Introduction</td>
                             <td>General</td>
                             <td>
-                                <a href="https://bcourses.berkeley.edu/files/69517309/download?download_frd=1">PPT</a>
+                                <a href="https://bcourses.berkeley.edu/files/69517309/download?download_frd=1">Slides</a>
                             </td>
                         </tr>
 
@@ -139,7 +139,7 @@
                                 <td>Exploratory data analysis</td>
                                 <td>EDA</td>
                                 <td>
-                                    <a href="https://bcourses.berkeley.edu/files/69478513/download?download_frd=1">PPT</a>
+                                    <a href="https://bcourses.berkeley.edu/files/69478513/download?download_frd=1">Slides</a>
                                 </td>
                             </tr>
 
@@ -148,7 +148,7 @@
                                 <td>Clustering</td>
                                 <td>EDA</td>
                                 <td>
-                                    <a href="https://bcourses.berkeley.edu/files/69478571/download?download_frd=1">PPT</a>
+                                    <a href="https://bcourses.berkeley.edu/files/69478571/download?download_frd=1">Slides</a>
                                 </td>
                             </tr>
 
