Added course readings.

--- a/index.html
+++ b/index.html
@@ -342,10 +342,20 @@
                 </h4>
 
                 <div class="w3-padding-8"></div>
-                <h2 class="w3-text-grey">Course Reader</h2>
-
-                <h4>The course readings are available on bCourses as pdf files and/or links to online materials.</h4>
-
+                <h2 class="w3-text-grey">Extra Readings</h2>
+                <h4>
+                    <ul>
+                        <li>
+                            <a href="https://bcourses.berkeley.edu/files/69478508/download?download_frd=1">Fask kmeans</a>
+                        </li>
+                        <li>
+                            <a href="https://bcourses.berkeley.edu/files/69478494/download?download_frd=1">Online kmeans</a>
+                        </li>
+                        <li>
+                            <a href="https://bcourses.berkeley.edu/files/69478492/download?download_frd=1">DBSCAN</a>
+                        </li>
+                    </ul>
+                </h4>
                 <div class="w3-padding-8"></div>
                 <h2 class="w3-text-grey">Course Grading</h2>
 
