Rm due date. Added slides 4.

--- a/index.html
+++ b/index.html
@@ -156,6 +156,9 @@
                                 <td>4</td>
                                 <td>Dimensionality reduction</td>
                                 <td>EDA</td>
+                                <td>
+                                    <a href="https://bcourses.berkeley.edu/files/69478502/download?download_frd=1">Slides</a>
+                                </td>
                             </tr>
 
                             <tr>
@@ -317,7 +320,7 @@
                         <tr>
                             <th>Homework Problems</th>
                             <th>Data Files</th>
-                            <th>Due Date</th>
+                            <!-- <th>Due Date</th> -->
                         </tr>
                         <tr>
                             <td>
@@ -326,7 +329,7 @@
                             <td>
                                 <a href="https://bcourses.berkeley.edu/files/69478496/download?download_frd=1">Data File</a>
                             </td>
-                            <td>Set. 15</td>
+                            <!-- <td>Set. 15</td> -->
                         </tr>
                     </table>
                 </h4>
