Added and organize ipynb examples.

--- a/index.html
+++ b/index.html
@@ -132,174 +132,170 @@
                             </td>
                         </tr>
 
-                        <div class='w3-text-grey'>
+                        <tr>
+                            <td>2</td>
+                            <td>Exploratory data analysis</td>
+                            <td>EDA</td>
+                            <td>
+                                <a href="https://bcourses.berkeley.edu/files/69478513/download?download_frd=1">Slides</a>
+                            </td>
+                        </tr>
 
-                            <tr>
-                                <td>2</td>
-                                <td>Exploratory data analysis</td>
-                                <td>EDA</td>
-                                <td>
-                                    <a href="https://bcourses.berkeley.edu/files/69478513/download?download_frd=1">Slides</a>
-                                </td>
-                            </tr>
+                        <tr>
+                            <td>3</td>
+                            <td>Clustering</td>
+                            <td>EDA</td>
+                            <td>
+                                <a href="https://bcourses.berkeley.edu/files/69478571/download?download_frd=1">Slides</a>
+                            </td>
+                        </tr>
 
-                            <tr>
-                                <td>3</td>
-                                <td>Clustering</td>
-                                <td>EDA</td>
-                                <td>
-                                    <a href="https://bcourses.berkeley.edu/files/69478571/download?download_frd=1">Slides</a>
-                                </td>
-                            </tr>
+                        <tr>
+                            <td>4</td>
+                            <td>Dimensionality reduction</td>
+                            <td>EDA</td>
+                            <td>
+                                <a href="https://bcourses.berkeley.edu/files/69562758/download?download_frd=1">Slides</a>
+                            </td>
+                        </tr>
 
-                            <tr>
-                                <td>4</td>
-                                <td>Dimensionality reduction</td>
-                                <td>EDA</td>
-                                <td>
-                                    <a href="https://bcourses.berkeley.edu/files/69562758/download?download_frd=1">Slides</a>
-                                </td>
-                            </tr>
+                        <tr>
+                            <td>5</td>
+                            <td>Spatial databases I</td>
+                            <td>Data Handling</td>
+                        </tr>
 
-                            <tr>
-                                <td>5</td>
-                                <td>Spatial databases I</td>
-                                <td>Data Handling</td>
-                            </tr>
+                        <tr>
+                            <td>6</td>
+                            <td>Spatial databases II</td>
+                            <td>Data Handling</td>
+                        </tr>
 
-                            <tr>
-                                <td>6</td>
-                                <td>Spatial databases II</td>
-                                <td>Data Handling</td>
-                            </tr>
+                        <tr>
+                            <td>7</td>
+                            <td>GIS and web mapping</td>
+                            <td>Data Handling</td>
+                        </tr>
 
-                            <tr>
-                                <td>7</td>
-                                <td>GIS and web mapping</td>
-                                <td>Data Handling</td>
-                            </tr>
+                        <tr>
+                            <td>8</td>
+                            <td>Trajectories and map matching</td>
+                            <td>Data Processing</td>
+                        </tr>
 
-                            <tr>
-                                <td>8</td>
-                                <td>Trajectories and map matching</td>
-                                <td>Data Processing</td>
-                            </tr>
+                        <tr>
+                            <td>9</td>
+                            <td>Map matching and reconstruction</td>
+                            <td>Data Processing</td>
+                        </tr>
 
-                            <tr>
-                                <td>9</td>
-                                <td>Map matching and reconstruction</td>
-                                <td>Data Processing</td>
-                            </tr>
+                        <tr>
+                            <td>10</td>
+                            <td>Point Pattern Analysis</td>
+                            <td>Spatial Statistics</td>
+                        </tr>
 
-                            <tr>
-                                <td>10</td>
-                                <td>Point Pattern Analysis</td>
-                                <td>Spatial Statistics</td>
-                            </tr>
+                        <tr>
+                            <td>11</td>
+                            <td>Geostatistics</td>
+                            <td>Spatial Statistics</td>
+                        </tr>
 
-                            <tr>
-                                <td>11</td>
-                                <td>Geostatistics</td>
-                                <td>Spatial Statistics</td>
-                            </tr>
+                        <tr>
+                            <td>12</td>
+                            <td>Spatial Regression</td>
+                            <td>Spatial Statistics</td>
+                        </tr>
 
-                            <tr>
-                                <td>12</td>
-                                <td>Spatial Regression</td>
-                                <td>Spatial Statistics</td>
-                            </tr>
+                        <tr>
+                            <td>13</td>
+                            <td>Geographically weighted models</td>
+                            <td>Spatial Statistics</td>
+                        </tr>
 
-                            <tr>
-                                <td>13</td>
-                                <td>Geographically weighted models</td>
-                                <td>Spatial Statistics</td>
-                            </tr>
+                        <tr>
+                            <td>14</td>
+                            <td>Intro to ML, model selection</td>
+                            <td>ML discriminative</td>
+                        </tr>
 
-                            <tr>
-                                <td>14</td>
-                                <td>Intro to ML, model selection</td>
-                                <td>ML discriminative</td>
-                            </tr>
+                        <tr>
+                            <td>15</td>
+                            <td>Locally linear models</td>
+                            <td>ML discriminative</td>
+                        </tr>
 
-                            <tr>
-                                <td>15</td>
-                                <td>Locally linear models</td>
-                                <td>ML discriminative</td>
-                            </tr>
+                        <tr>
+                            <td>16</td>
+                            <td>Kernel methods I, SVM</td>
+                            <td>ML discriminative</td>
+                        </tr>
 
-                            <tr>
-                                <td>16</td>
-                                <td>Kernel methods I, SVM</td>
-                                <td>ML discriminative</td>
-                            </tr>
+                        <tr>
+                            <td>17</td>
+                            <td>Kernel methods II, SVR</td>
+                            <td>ML discriminative</td>
+                        </tr>
 
-                            <tr>
-                                <td>17</td>
-                                <td>Kernel methods II, SVR</td>
-                                <td>ML discriminative</td>
-                            </tr>
+                        <tr>
+                            <td>18</td>
+                            <td>Elements of computer vision</td>
+                            <td>ML discriminative</td>
+                        </tr>
 
-                            <tr>
-                                <td>18</td>
-                                <td>Elements of computer vision</td>
-                                <td>ML discriminative</td>
-                            </tr>
+                        <tr>
+                            <td>19</td>
+                            <td>Mixture models, EM</td>
+                            <td>ML generative</td>
+                        </tr>
 
-                            <tr>
-                                <td>19</td>
-                                <td>Mixture models, EM</td>
-                                <td>ML generative</td>
-                            </tr>
+                        <tr>
+                            <td>20</td>
+                            <td>MC, HMM, CRF</td>
+                            <td>ML generative</td>
+                        </tr>
 
-                            <tr>
-                                <td>20</td>
-                                <td>MC, HMM, CRF</td>
-                                <td>ML generative</td>
-                            </tr>
+                        <tr>
+                            <td>21</td>
+                            <td>Spatial PLSA/LDA</td>
+                            <td>ML generative</td>
+                        </tr>
 
-                            <tr>
-                                <td>21</td>
-                                <td>Spatial PLSA/LDA</td>
-                                <td>ML generative</td>
-                            </tr>
+                        <tr>
+                            <td>22</td>
+                            <td>Recommender Systems</td>
+                            <td>ML generative</td>
+                        </tr>
 
-                            <tr>
-                                <td>22</td>
-                                <td>Recommender Systems</td>
-                                <td>ML generative</td>
-                            </tr>
+                        <tr>
+                            <td>23</td>
+                            <td>Complex networks</td>
+                            <td>Complex Systems</td>
+                        </tr>
 
-                            <tr>
-                                <td>23</td>
-                                <td>Complex networks</td>
-                                <td>Complex Systems</td>
-                            </tr>
+                        <tr>
+                            <td>24</td>
+                            <td>Agent-based models</td>
+                            <td>Complex Systems</td>
+                        </tr>
 
-                            <tr>
-                                <td>24</td>
-                                <td>Agent-based models</td>
-                                <td>Complex Systems</td>
-                            </tr>
+                        <tr>
+                            <td>25</td>
+                            <td>Catch-up</td>
+                            <td>Complex Systems</td>
+                        </tr>
 
-                            <tr>
-                                <td>25</td>
-                                <td>Catch-up</td>
-                                <td>Complex Systems</td>
-                            </tr>
+                        <tr>
+                            <td>26</td>
+                            <td>Final projects</td>
+                            <td>Complex Systems</td>
+                        </tr>
 
-                            <tr>
-                                <td>26</td>
-                                <td>Final projects</td>
-                                <td>Complex Systems</td>
-                            </tr>
-
-                            <tr>
-                                <td>27</td>
-                                <td>Final projects</td>
-                                <td>Complex Systems</td>
-                            </tr>
-
-                        </div>
+                        <tr>
+                            <td>27</td>
+                            <td>Final projects</td>
+                            <td>Complex Systems</td>
+                        </tr>
 
                     </table>
                 </h4>
@@ -336,12 +332,40 @@
 
                 <div class="w3-padding-8"></div>
                 <h2 class="w3-text-grey">iPython Notebook Examples</h2>
+
                 <h4>
-                    <ul>
-                        <li>
-                            <a href="https://bcourses.berkeley.edu/files/69478545/download?download_frd=1">Clustering</a>
-                        </li>
-                    </ul>
+                    <table style="width:90%">
+                        <tr>
+                            <th>Lecture</th>
+                            <th>Topic</th>
+                            <th>Examples</th>
+                            <th>Data Files</th>
+                        </tr>
+                        <tr>
+                            <td>3</td>
+                            <td>Clustering</td>
+                            <td>
+                                <a href="https://bcourses.berkeley.edu/files/69478545/download?download_frd=1">Clustering</a>
+                            </td>
+                            <td></td>
+                        </tr>
+                        <tr>
+
+                            <td>4</td>
+                            <td>Dimensionality reduction</td>
+                            <td>
+                                <a href="https://bcourses.berkeley.edu/files/69564167/download?download_frd=1">PCA</a>,
+                                <a href="https://bcourses.berkeley.edu/files/69564164/download?download_frd=1">MDS</a>,
+                                <a href="https://bcourses.berkeley.edu/files/69564166/download?download_frd=1">PCA vs. MDS</a>
+
+                            </td>
+                            <td>
+                                <a href="https://bcourses.berkeley.edu/files/69478510/download?download_frd=1">Attributes</a>,
+                                <a href="https://bcourses.berkeley.edu/files/69478470/download?download_frd=1">images.mat</a>
+
+                            </td>
+                        </tr>
+                    </table>
                 </h4>
 
                 <div class="w3-padding-8"></div>
