Added lecture 5 slides.

--- a/index.html
+++ b/index.html
@@ -163,6 +163,9 @@
                             <td>5</td>
                             <td>Spatial databases I</td>
                             <td>Data Handling</td>
+                            <td>
+                                <a href="https://bcourses.berkeley.edu/files/69478563/download?download_frd=1">Slides</a>
+                            </td>
                         </tr>
 
                         <tr>
